--- a/app/src/main/res/layout/activity_cocina.xml
+++ b/app/src/main/res/layout/activity_cocina.xml
@@ -17,4 +17,73 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:onClick="toRecibidor" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblVida"
+        android:id="@+id/textView25"
+        android:layout_marginBottom="60dp"
+        android:layout_above="@+id/button11"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblTurno"
+        android:id="@+id/textView26"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView25"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblAccion"
+        android:id="@+id/textView27"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView26"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblActionCoc"
+        android:layout_alignTop="@+id/textView27"
+        android:layout_alignEnd="@+id/lblTurnoCoc" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEXT"
+        android:id="@+id/lblTurnoCoc"
+        android:layout_below="@+id/lblActionCoc"
+        android:layout_toRightOf="@+id/textView27"
+        android:layout_marginLeft="23dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblVidaCoc"
+        android:layout_below="@+id/lblTurnoCoc"
+        android:layout_toRightOf="@+id/textView27"
+        android:layout_marginLeft="23dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnExpltxt"
+        android:id="@+id/button20"
+        android:onClick="explorar"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/button11" />
+
 </RelativeLayout>
