--- a/app/src/main/res/layout/activity_hab_principal.xml
+++ b/app/src/main/res/layout/activity_hab_principal.xml
@@ -17,4 +17,70 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:onClick="toPasillo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblVida"
+        android:id="@+id/textView22"
+        android:layout_marginBottom="76dp"
+        android:layout_above="@+id/button9"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblTurno"
+        android:id="@+id/textView23"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView22"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblAccion"
+        android:id="@+id/textView24"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView23"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblAccionHabPrin"
+        android:layout_toEndOf="@+id/button9"
+        android:layout_alignTop="@+id/textView24" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEXT"
+        android:id="@+id/lblturnoHabPrin"
+        android:layout_below="@+id/lblAccionHabPrin"
+        android:layout_toRightOf="@+id/button9" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblVideoHabPrin"
+        android:layout_below="@+id/lblturnoHabPrin"
+        android:layout_toRightOf="@+id/button9" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnExpltxt"
+        android:id="@+id/button21"
+        android:onClick="explorar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
