--- a/app/src/main/res/layout/activity_recibidor.xml
+++ b/app/src/main/res/layout/activity_recibidor.xml
@@ -52,4 +52,71 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblVida"
+        android:id="@+id/textView10"
+        android:layout_marginBottom="63dp"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblTurno"
+        android:id="@+id/textView11"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView10"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblAccion"
+        android:id="@+id/textView12"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView11"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblVidaRec"
+        android:layout_below="@+id/lblTurnoRec"
+        android:layout_alignEnd="@+id/lblTurnoRec" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEXT"
+        android:id="@+id/lblTurnoRec"
+        android:layout_below="@+id/lblAccionRec"
+        android:layout_alignEnd="@+id/lblAccionRec" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblAccionRec"
+        android:layout_alignTop="@+id/textView12"
+        android:layout_alignEnd="@+id/button2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnExpltxt"
+        android:id="@+id/button23"
+        android:onClick="explorar"
+        android:layout_below="@+id/lblVidaRec"
+        android:layout_alignEnd="@+id/btnToPasillo" />
+
 </RelativeLayout>
