--- a/app/src/main/res/layout/activity_sala_ritual.xml
+++ b/app/src/main/res/layout/activity_sala_ritual.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.enrique.mansiones_locura.SalaRitual">
+    tools:context="com.example.enrique.mansiones_locura.SalaRitual"
+    android:id="@+id/z">
 
     <Button
         android:layout_width="wrap_content"
@@ -17,4 +18,73 @@
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:onClick="toSotano" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblVida"
+        android:id="@+id/textView4"
+        android:layout_marginBottom="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblTurno"
+        android:id="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView4"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblAccion"
+        android:id="@+id/textView6"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/textView5"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblAccionSaRit"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_alignEnd="@+id/lblTurnoSaRit" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEXT"
+        android:id="@+id/lblTurnoSaRit"
+        android:layout_below="@+id/lblAccionSaRit"
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_marginLeft="23dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="TEST"
+        android:id="@+id/lblVidaSaRit"
+        android:layout_below="@+id/lblTurnoSaRit"
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_marginLeft="23dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnExpltxt"
+        android:id="@+id/button24"
+        android:onClick="explorar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
