--- a/app/src/main/res/layout/activity_sotano.xml
+++ b/app/src/main/res/layout/activity_sotano.xml
@@ -26,4 +26,69 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:onClick="toSalaRitual" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblVida"
+        android:id="@+id/txtVida"
+        android:layout_above="@+id/button12"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="40dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblTurno"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/button12"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/txtlblAccion"
+        android:id="@+id/textView3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/lbltxtVida"
+        android:id="@+id/lblVidaRec"
+        android:layout_alignTop="@+id/txtVida"
+        android:layout_alignEnd="@+id/button13" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/lbltxtTurn"
+        android:id="@+id/lblTurnoRec"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_alignStart="@+id/lblVidaRec" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/lbltxtAccion"
+        android:id="@+id/lblAccionRec"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/lblTurnoRec" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnExpltxt"
+        android:id="@+id/button25"
+        android:onClick="explorar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
