--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -16,5 +16,6 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:text="@string/StartGame"
-        android:onClick="startNewGame" />
+        android:onClick="startNewGame"
+        android:textSize="17sp" />
 </RelativeLayout>
