--- a/app/src/main/res/layout/activity_cocina.xml
+++ b/app/src/main/res/layout/activity_cocina.xml
@@ -7,16 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.enrique.mansiones_locura.Cocina">
+    tools:context="com.example.enrique.mansiones_locura.Cocina"
+    android:background="@drawable/cocina">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lblRecibidor"
         android:id="@+id/button11"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="toRecibidor" />
+        android:onClick="toRecibidor"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,9 +25,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblVida"
         android:id="@+id/textView25"
-        android:layout_marginBottom="60dp"
+        android:layout_alignParentBottom="true"
         android:layout_above="@+id/button11"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,9 +37,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblTurno"
         android:id="@+id/textView26"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/textView25"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,9 +50,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblAccion"
         android:id="@+id/textView27"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/textView26"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,8 +63,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="TEST"
         android:id="@+id/lblActionCoc"
+        android:layout_marginBottom="5dp"
         android:layout_alignTop="@+id/textView27"
-        android:layout_alignEnd="@+id/lblTurnoCoc" />
+        android:layout_alignEnd="@+id/lblTurnoCoc"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -63,9 +75,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="TEXT"
         android:id="@+id/lblTurnoCoc"
+        android:layout_marginBottom="5dp"
         android:layout_below="@+id/lblActionCoc"
         android:layout_toRightOf="@+id/textView27"
-        android:layout_marginLeft="23dp" />
+        android:layout_marginLeft="23dp"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,7 +90,19 @@
         android:id="@+id/lblVidaCoc"
         android:layout_below="@+id/lblTurnoCoc"
         android:layout_toRightOf="@+id/textView27"
-        android:layout_marginLeft="23dp" />
+        android:layout_marginLeft="23dp"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblCocina"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
