--- a/app/src/main/res/layout/activity_hab_invitados.xml
+++ b/app/src/main/res/layout/activity_hab_invitados.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.enrique.mansiones_locura.HabInvitados">
+    tools:context="com.example.enrique.mansiones_locura.HabInvitados"
+    android:background="@drawable/habinv">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,7 +17,8 @@
         android:id="@+id/button10"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:onClick="toPasillo" />
+        android:onClick="toPasillo"
+        android:textSize="15sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +26,9 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblVida"
         android:id="@+id/textView46"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +38,9 @@
         android:id="@+id/textView47"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView46"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +50,9 @@
         android:id="@+id/textView48"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView47"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,7 +61,9 @@
         android:text="TEST"
         android:id="@+id/lblTurnoHabInv"
         android:layout_alignTop="@+id/textView47"
-        android:layout_alignStart="@+id/lblAccionHabInv" />
+        android:layout_alignStart="@+id/lblAccionHabInv"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +72,9 @@
         android:text="TEXT"
         android:id="@+id/lblVidaHabInv"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/lblTurnoHabInv" />
+        android:layout_alignStart="@+id/lblTurnoHabInv"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,7 +83,19 @@
         android:text="TEST"
         android:id="@+id/lblAccionHabInv"
         android:layout_alignBottom="@+id/textView48"
-        android:layout_alignEnd="@+id/button10" />
+        android:layout_alignEnd="@+id/button10"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblHabInvitados"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
@@ -80,5 +104,6 @@
         android:id="@+id/button19"
         android:layout_alignTop="@+id/lblVidaHabInv"
         android:layout_alignParentEnd="true"
-        android:onClick="explorar" />
+        android:onClick="explorar"
+        android:textSize="15sp" />
 </RelativeLayout>
