--- a/app/src/main/res/layout/activity_hab_principal.xml
+++ b/app/src/main/res/layout/activity_hab_principal.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.enrique.mansiones_locura.HabPrincipal">
+    tools:context="com.example.enrique.mansiones_locura.HabPrincipal"
+    android:background="@drawable/habprincipal">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,7 +17,8 @@
         android:id="@+id/button9"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:onClick="toPasillo" />
+        android:onClick="toPasillo"
+        android:textSize="15sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,9 +26,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblVida"
         android:id="@+id/textView22"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="50dp"
         android:layout_above="@+id/button9"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,9 +38,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblTurno"
         android:id="@+id/textView23"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/textView22"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,9 +51,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblAccion"
         android:id="@+id/textView24"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/textView23"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,8 +64,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="TEST"
         android:id="@+id/lblAccionHabPrin"
+        android:layout_marginBottom="5dp"
         android:layout_toEndOf="@+id/button9"
-        android:layout_alignTop="@+id/textView24" />
+        android:layout_alignTop="@+id/textView24"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -63,8 +76,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="TEXT"
         android:id="@+id/lblturnoHabPrin"
+        android:layout_marginBottom="5dp"
         android:layout_below="@+id/lblAccionHabPrin"
-        android:layout_toRightOf="@+id/button9" />
+        android:layout_toRightOf="@+id/button9"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,7 +89,19 @@
         android:text="TEST"
         android:id="@+id/lblVideoHabPrin"
         android:layout_below="@+id/lblturnoHabPrin"
-        android:layout_toRightOf="@+id/button9" />
+        android:layout_toRightOf="@+id/button9"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblHabPrincipal"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
@@ -82,5 +110,6 @@
         android:id="@+id/button21"
         android:onClick="explorar"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textSize="15sp" />
 </RelativeLayout>
