--- a/app/src/main/res/layout/activity_pista1.xml
+++ b/app/src/main/res/layout/activity_pista1.xml
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hint1"
-            android:id="@+id/textView8" />
+            android:id="@+id/textView8"
+            android:textSize="14sp" />
     </ScrollView>
 
     <Button
