--- a/app/src/main/res/layout/activity_pista2.xml
+++ b/app/src/main/res/layout/activity_pista2.xml
@@ -20,7 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editText"
-            android:text="@string/hint2" />
+            android:text="@string/hint2"
+            android:textSize="14sp" />
     </ScrollView>
 
     <Button
