--- a/app/src/main/res/layout/activity_sotano.xml
+++ b/app/src/main/res/layout/activity_sotano.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.enrique.mansiones_locura.Sotano">
+    tools:context="com.example.enrique.mansiones_locura.Sotano"
+    android:background="@drawable/sotano">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,16 +17,19 @@
         android:id="@+id/button12"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:onClick="toRecibidor" />
+        android:onClick="toRecibidor"
+        android:textSize="15sp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lblSalaRitual"
         android:id="@+id/button13"
-        android:layout_centerVertical="true"
+        android:onClick="toSalaRitual"
+        android:textSize="15sp"
+        android:layout_above="@+id/txtVida"
         android:layout_alignParentStart="true"
-        android:onClick="toSalaRitual" />
+        android:layout_marginBottom="73dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,9 +37,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblVida"
         android:id="@+id/txtVida"
-        android:layout_above="@+id/button12"
+        android:layout_above="@+id/textView2"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginBottom="5dp"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,8 +49,11 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/txtlblTurno"
         android:id="@+id/textView2"
-        android:layout_above="@+id/button12"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="5dp"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,7 +62,9 @@
         android:text="@string/txtlblAccion"
         android:id="@+id/textView3"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +73,9 @@
         android:text="@string/lbltxtVida"
         android:id="@+id/lblVidaRec"
         android:layout_alignTop="@+id/txtVida"
-        android:layout_alignEnd="@+id/button13" />
+        android:layout_alignEnd="@+id/button13"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,7 +84,9 @@
         android:text="@string/lbltxtTurn"
         android:id="@+id/lblTurnoRec"
         android:layout_alignTop="@+id/textView2"
-        android:layout_alignStart="@+id/lblVidaRec" />
+        android:layout_alignStart="@+id/lblVidaRec"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,7 +95,19 @@
         android:text="@string/lbltxtAccion"
         android:id="@+id/lblAccionRec"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/lblTurnoRec" />
+        android:layout_alignStart="@+id/lblTurnoRec"
+        android:textSize="15sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblSotano"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
@@ -89,6 +116,7 @@
         android:id="@+id/button25"
         android:onClick="explorar"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textSize="15sp" />
 
 </RelativeLayout>
